--- a/mlkit/app/build.gradle
+++ b/mlkit/app/build.gradle
@@ -1,10 +1,9 @@
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 30
     defaultConfig {
-        applicationId "com.google.firebase.samples.apps.mlkit"
+        applicationId "com.example.foodology"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
