--- a/mlkit/app/src/main/AndroidManifest.xml
+++ b/mlkit/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.google.firebase.samples.apps.mlkit">
+    package="com.example.foodology">
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -21,7 +21,7 @@
             android:value="barcode,face,ocr,ica" />
 
         <activity
-            android:name="com.google.firebase.samples.apps.mlkit.MainActivity"
+            android:name="com.example.foodology.java.MainActivity"
             android:exported="true"
             android:label="Foodology">
             <intent-filter>
@@ -31,10 +31,10 @@
         </activity>
 		
 		<activity
-            android:name="com.google.firebase.samples.apps.mlkit.java.StillImageActivity"/>
+            android:name="com.example.foodology.java.StillImageActivity"/>
 
         <activity
-            android:name=".common.preference.SettingsActivity"
+            android:name="com.example.foodology.common.preference.SettingsActivity"
             android:exported="false"/>
     </application>
 
