--- a/foodology/app/build.gradle
+++ b/foodology/app/build.gradle
@@ -48,7 +48,7 @@ dependencies {
 	implementation 'com.android.support:appcompat-v7:27.1.1'
 
     // ML Kit dependencies
-    implementation 'com.google.firebase:firebase-ml-vision:24.1.0'
+    //implementation 'com.google.firebase:firebase-ml-vision:24.1.0'
     implementation 'com.google.firebase:firebase-database:19.4.0'
     implementation 'com.google.mlkit:image-labeling:17.0.0'
 
