--- a/mlkit/app/build.gradle
+++ b/mlkit/app/build.gradle
@@ -32,6 +32,9 @@ android {
     buildFeatures {
         viewBinding = true
     }
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -51,6 +54,7 @@ dependencies {
     // ML Kit dependencies
     implementation 'com.google.firebase:firebase-ml-vision:24.1.0'
     implementation 'com.google.firebase:firebase-database:19.4.0'
+    implementation 'com.google.firebase:firebase-auth:19.4.0'
 
     // Needed to fix a temporary issue with duplicate class com.google.android.gms.internal.vision.* errors
     // See: https://firebase.google.com/support/release-notes/android#bom_v25-8-0
@@ -60,5 +64,7 @@ dependencies {
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    implementation "androidx.databinding:databinding-compiler:$data_binding_compiler_version"
 }
 apply plugin: 'com.google.gms.google-services'
