--- a/mlkit/local.properties
+++ b/mlkit/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Sep 29 21:35:06 SGT 2020
-sdk.dir=/Users/okerlyn/Library/Android/sdk
+#Tue Sep 29 23:27:30 SGT 2020
+sdk.dir=C\:\\Users\\Lee Jia Wei\\AppData\\Local\\Android\\Sdk
