--- a/mlkit/app/build.gradle
+++ b/mlkit/app/build.gradle
@@ -58,6 +58,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-ml-vision:24.1.0'
     implementation 'com.google.firebase:firebase-database:19.4.0'
     implementation 'com.google.firebase:firebase-auth:19.4.0'
+    implementation 'com.google.firebase:firebase-firestore:21.4.3'
+    implementation 'com.google.firebase:firebase-storage:19.1.1'
+    implementation 'com.google.guava:guava:27.0.1-android'
 
     // Needed to fix a temporary issue with duplicate class com.google.android.gms.internal.vision.* errors
     // See: https://firebase.google.com/support/release-notes/android#bom_v25-8-0
@@ -70,7 +73,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
 apply plugin: 'com.google.gms.google-services'
 googleServices { disableVersionCheck = false }
