--- a/mlkit/app/src/main/AndroidManifest.xml
+++ b/mlkit/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             android:value="barcode,face,ocr,ica" />
 
         <activity
-            android:name="com.google.firebase.samples.apps.mlkit.MainActivity"
+            android:name="com.google.firebase.samples.apps.mlkit.Login"
             android:exported="true"
             android:label="Foodology">
             <intent-filter>
@@ -29,6 +29,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="com.google.firebase.samples.apps.mlkit.MainActivity"/>
+
+        <activity
+            android:name="com.google.firebase.samples.apps.mlkit.EditProfile"/>
+
+        <activity
+            android:name="com.google.firebase.samples.apps.mlkit.Register"/>
 		
 		<activity
             android:name="com.google.firebase.samples.apps.mlkit.java.StillImageActivity"/>
