--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ mlkit/.idea/workspace.xml
 mlkit/app/google-services.json
 mlkit/app/build.gradle
 mlkit/gradle/wrapper/gradle-wrapper.properties
+mlkit/.idea/workspace.xml
