--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-
+mlkit/.idea/workspace.xml
 mlkit/app/google-services.json
 mlkit/app/build.gradle
 mlkit/gradle/wrapper/gradle-wrapper.properties
+mlkit/.idea/workspace.xml
