--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ mlkit/app/google-services.json
 mlkit/app/build.gradle
 mlkit/gradle/wrapper/gradle-wrapper.properties
 mlkit/.idea/workspace.xml
+mlkit/.gradle/buildOutputCleanup/buildOutputCleanup.lock
+mlkit/.gradle/checksums/checksums.lock
+mlkit/local.properties
