--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ mlkit/.idea/workspace.xml
 mlkit/.gradle/buildOutputCleanup/buildOutputCleanup.lock
 mlkit/.gradle/checksums/checksums.lock
 mlkit/local.properties
+mlkit/.idea/assetWizardSettings.xml
