--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ mlkit/.gradle/buildOutputCleanup/buildOutputCleanup.lock
 mlkit/.gradle/checksums/checksums.lock
 mlkit/local.properties
 mlkit/.idea/assetWizardSettings.xml
+mlkit/.idea/caches/build_file_checksums.ser
+mlkit/.idea/modules/app/app.iml
+mlkit/local.properties
