--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ mlkit/.idea/assetWizardSettings.xml
 mlkit/.idea/caches/build_file_checksums.ser
 mlkit/.idea/modules/app/app.iml
 mlkit/local.properties
+mlkit/.idea/caches/build_file_checksums.ser
+mlkit/.idea/modules/app/app.iml
+mlkit/local.properties
