--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ mlkit/local.properties
 mlkit/.idea/caches/build_file_checksums.ser
 mlkit/.idea/modules/app/app.iml
 mlkit/local.properties
+mlkit/local.properties
+mlkit/.idea/modules/app/app.iml
+mlkit/.idea/caches/build_file_checksums.ser
