--- a/mlkit/local.properties
+++ b/mlkit/local.properties
@@ -4,9 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-<<<<<<< Updated upstream
-#Tue Sep 29 23:27:30 SGT 2020
-=======
-#Wed Sep 30 22:00:33 SGT 2020
->>>>>>> Stashed changes
-sdk.dir=D\:\\Users\\1920S2\\AppData\\Local\\Android\\Sdk
+#Wed Oct 07 14:11:11 SGT 2020
+>>>>>>>=Stashed changes
+sdk.dir=C\:\\Users\\Lee Jia Wei\\AppData\\Local\\Android\\Sdk
+=\=\=\=\=\=\=
+<<<<<<<=Updated upstream
