--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ mlkit/local.properties
 mlkit/.idea/modules/app/app.iml
 mlkit/.idea/caches/build_file_checksums.ser
 mlkit/.idea/assetWizardSettings.xml
+mlkit/.idea/modules/app/app.iml
