--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ mlkit/.idea/modules/app/app.iml
 mlkit/.idea/caches/build_file_checksums.ser
 mlkit/.idea/assetWizardSettings.xml
 mlkit/.idea/modules/app/app.iml
+mlkit/.idea/modules/app/app.iml
