--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ mlkit/.gradle/checksums/sha1-checksums.bin
 mlkit/.idea/caches/build_file_checksums.ser
 mlkit/.idea/modules/app/app.iml
 mlkit/local.properties
+mlkit/.idea/caches/build_file_checksums.ser
+mlkit/.idea/modules.xml
+mlkit/.idea/modules/app/app.iml
+mlkit/local.properties
