--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,6 @@ mlkit/.gradle/checksums/sha1-checksums.bin
 mlkit/.idea/caches/build_file_checksums.ser
 mlkit/.idea/modules/app/app.iml
 mlkit/local.properties
+mlkit/.idea/caches/build_file_checksums.ser
+mlkit/.idea/modules/app/app.iml
+mlkit/local.properties
