--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,8 @@ mlkit/local.properties
 mlkit/.idea/caches/build_file_checksums.ser
 mlkit/.idea/modules/app/app.iml
 mlkit/local.properties
+mlkit/.gradle/checksums/checksums.lock
+mlkit/.gradle/checksums/sha1-checksums.bin
+mlkit/.idea/caches/build_file_checksums.ser
+mlkit/.idea/modules/app/app.iml
+mlkit/local.properties
