--- a/mlkit/local.properties
+++ b/mlkit/local.properties
@@ -4,8 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Oct 07 14:11:11 SGT 2020
+#Tue Oct 13 19:18:11 SGT 2020
 >>>>>>>=Stashed changes
-sdk.dir=C\:\\Users\\Lee Jia Wei\\AppData\\Local\\Android\\Sdk
-=\=\=\=\=\=\=
+sdk.dir=/Users/okerlyn/Library/Android/sdk
 <<<<<<<=Updated upstream
+=\=\=\=\=\=\=
