--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ mlkit/.idea/caches/build_file_checksums.ser
 mlkit/.idea/modules/app/app.iml
 mlkit/local.properties
 mlkit/.idea/modules/app/app.iml
+mlkit/.idea/modules/app/app.iml
