--- a/mlkit/local.properties
+++ b/mlkit/local.properties
@@ -4,8 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Oct 13 19:18:11 SGT 2020
+#Wed Oct 14 15:47:13 SGT 2020
 >>>>>>>=Stashed changes
-sdk.dir=/Users/okerlyn/Library/Android/sdk
-<<<<<<<=Updated upstream
+sdk.dir=C\:\\Users\\Lee Jia Wei\\AppData\\Local\\Android\\Sdk
 =\=\=\=\=\=\=
+<<<<<<<=Updated upstream
