--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,10 @@ mlkit/.gradle/checksums/sha1-checksums.bin
 mlkit/.idea/caches/build_file_checksums.ser
 mlkit/.idea/modules/app/app.iml
 mlkit/local.properties
+mlkit/local.properties
+mlkit/.idea/modules/app/app.iml
+mlkit/.idea/codeStyles/Project.xml
+mlkit/.idea/caches/build_file_checksums.ser
+mlkit/.idea/assetWizardSettings.xml
+mlkit/.gradle/checksums/sha1-checksums.bin
+mlkit/.gradle/checksums/checksums.lock
